# 401_data_structures_and_algorithms

./: .gitignore  README.md
c-sharp/: .gitignore  README.md  c-sharp.sln
c-sharp/CodeChallenge1/: ArrayReverse.cs  ArrayReverseTest.cs  README.md
c-sharp/CodeChallenge10/: CodeChallenge10.csproj  README.md  StackAndQueue.cs  StackAndQueueTest.cs
c-sharp/CodeChallenge11/: CodeChallenge11.csproj  CodeChallenge11.sln  SplittingString.cs  SplittingStringTest.cs  StackQueuePsuedo.cs  StackQueuePsuedoTest.cs
c-sharp/CodeChallenge12/: CodeChallenge12.sln  StackAndQueueAnimalShelter.cs  StackAndQueueAnimalShelterTest.cs
c-sharp/CodeChallenge13/: StackQueueBrackets.cs  StackQueueBracketsTest.cs
c-sharp/CodeChallenge14/: CodeChallenge14.cs  CodeChallenge14Tests.cs  MaxStack.cs
c-sharp/CodeChallenge2/: ArrayInsertShift.cs  ArrayInsertShiftTest.cs  README.md
c-sharp/CodeChallenge3/: ArrayBinarySearch.cs  ArrayBinarySearchTest.cs  README.md
c-sharp/CodeChallenge4/: Fibonacci.cs  FibonacciAndRowSums.cs  FibonacciAndRowSumsTest.cs  FibonacciTest.cs  README.md  RowSums.cs  RowSumsTest.cs
c-sharp/CodeChallenge5/: LinkedList.cs  LinkedListTest.cs  README.md
c-sharp/CodeChallenge6/: CodeChallenge6.csproj  LinkedListInsert.cs  LinkedListInsertTest.cs  README.md
data_structures_and_algorithms/: Challenge_Documentation.md  Challenge_Submission.md  Challenge_Testing.md  FACILITATOR.md  README.md  Whiteboard_Workflow.md
data_structures_and_algorithms/Code_401/class-30/demos/python/hashmap/: hashmap.py  pyproject.toml  test_hashmap.py
generic-code-challenges/: README.md
(+416 files in other folders)
